--- a/curso-jsp/WebContent/WEB-INF/web.xml
+++ b/curso-jsp/WebContent/WEB-INF/web.xml
@@ -4,12 +4,9 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
-  
   <filter>
-  	<filter-name>
-  		filter
-  	</filter-name>
-  	<filter-class>
+    <filter-name>filter</filter-name>
+    <filter-class>
   		filter.Filter
   	</filter-class>
   </filter>
